# forgetful_drone

./: .gitignore  CMakeLists.old.txt  CMakeLists.txt  README.md  dependencies.yaml  package.xml
_deleted_files/forgetful_drones/gazebo/models/gate/: model.config  model.sdf
_deleted_files/forgetful_drones/include/forgetful_drones/: forgetful_orchestrator.h
_deleted_files/gazebo/models/gate/meshes/: old.gate.dae
_deleted_files/include/forgetful_drones/: forgetful_expert.h
_deleted_files/parameters/: forgetful_orchestrator.yaml
_deleted_files/src/: forgetful_expert_node.cpp  forgetful_navigator_node.cpp
docs/THU/thesis_proposal/: ProposalDefense.bib  ProposalDefense.bib.old  ProposalDefense.bib.sav.tmp  example.bib  example.bib.sav.tmp  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc
docs/THU/thesis_proposal/Appendices/: AppendixA.aux  AppendixA.tex  AppendixB.aux  AppendixB.tex  AppendixC.aux
docs/THU/thesis_proposal/Appendices.old/: AppendixB.tex  AppendixC.tex
docs/THU/thesis_proposal/Chapters/: Chapter1.aux  Chapter1.tex  Chapter2.aux  Chapter2.tex  Chapter3.aux  Chapter3.tex
docs/THU/thesis_proposal/Chapters.old/: Chapter0.aux  Chapter1.aux  Chapter1.tex  Chapter2.aux  Chapter2.tex  Chapter3.aux  Chapter3.tex
docs/TUB/diploma_template/bsc_msc_dipl_template_ENG_aubrey/: thesis.aux  thesis.bbl  thesis.blg  thesis.fdb_latexmk  thesis.fls  thesis.lof  thesis.lot  thesis.out  thesis.tex  thesis.toc
docs/TUB/proposal_thesis/: DiplomarbeitProposal.aux  DiplomarbeitProposal.bbl  DiplomarbeitProposal.blg  DiplomarbeitProposal.fls
docs/TUB/proposal_thesis/chapter/: proposal.tex
docs/TUB/thesis_proposal/: DiplomarbeitProposal.aux  DiplomarbeitProposal.bbl  DiplomarbeitProposal.blg  DiplomarbeitProposal.brf  DiplomarbeitProposal.dvi  DiplomarbeitProposal.fdb_latexmk  DiplomarbeitProposal.fls  DiplomarbeitProposal.tex  DiplomarbeitProposal.toc
docs/TUB/thesis_proposal/chapter/: bibliography.bib  deckblatt.aux  deckblatt.tex  proposal.aux  proposal.tex
docs/visualizations/: expert_state_projection_3d.py  global_via_local_to_image_transformation_2d.py  image_reference_system.py  learning_results.py  local_reference_system.py  plot_utils.py  racing_results.py  utils.py
gazebo/DELETE_worlds/: race_track.world  rotorS.world
gazebo/drone/urdf/: component_snippets.xacro  hummingbird_base.xacro  mav_generic_odometry_sensor.gazebo
gazebo/drone/vehicles/: hummingbird_.gazebo  hummingbird_rgbcamera300200.gazebo
gazebo/models/drone/urdf/: hummingbird_base.xacro
gazebo/models/drone/vehicles/: hummingbird_rgbcamera300200.gazebo
gazebo/models/gate/meshes/: gate.dae
gazebo/models/ground_plane/: model.config
gazebo/models/wall/: model.config  model.sdf
gazebo/rpg_gate/: model.config  model.sdf  model.stl
gazebo/spaceship_interior/00/: model.config  model.sdf
gazebo/thu_dme_gate/: model.config  model.sdf  model.stl
gazebo/tub_dai_gate/: model.config  model.sdf
gazebo/worlds/: RotorS.world
include/forgetful_drones/: forgetful_ann.hpp  forgetful_drone.h  forgetful_drone.hpp  forgetful_drones.old.h  forgetful_global_trajectory.hpp  forgetful_helpers.h  forgetful_helpers.hpp  forgetful_navigator.h  forgetful_simulator.h  forgetful_simulator.hpp  forgetful_simulator.old.h
launch/: dagger.sh  data_collection.launch  debug_drone.launch  debug_simulator.launch  forgetful_implemented.launch  generate_racetrack_data.launch  generate_racetracks.launch  generate_racetracks.sh  generate_training_data.launch  generate_training_data_backup.launch  test_ann.launch  test_ann.sh  test_ann_cpp.launch  test_ann_cpp.sh  test_ann_python.launch  test_ann_python.sh  test_brain.launch  test_dagger.launch  test_expert.launch  test_expert.sh  test_simulator.launch  test_simulator.sh
msg/: GateWaypointXYZs.msg  NavigatorInput.msg  NavigatorState.msg
parameters/: forgetful_drone.example.yaml  forgetful_drone.yaml  forgetful_expert.yaml  forgetful_navigator.yaml  forgetful_simulator.yaml
racetracks/: 0_0_0_0_0_1___4.txt  0_0_0_0_1_2___7.txt  0_0_0_1_0_1___0.txt  0_0_0_1_0_1___1.txt  0_0_0_1_0_1___2.txt  0_0_0_1_0_1___3.txt  0_0_0_1_0_1___4.txt  0_0_0_1_0_1___5.txt  0_0_0_1_0_1___6.txt  0_0_0_1_0_1___7.txt  0_0_0_1_0_1___8.txt  0_0_0_1_0_1___9.txt  0_0_0_1_0_2___0.txt  0_0_0_1_0_2___1.txt  0_0_0_1_0_2___2.txt  0_0_0_1_0_2___3.txt  0_0_0_1_0_2___4.txt  0_0_0_1_0_2___5.txt  0_0_0_1_0_2___6.txt  0_0_0_1_0_2___7.txt  0_0_0_1_0_2___8.txt  0_0_0_1_0_2___9.txt  0_0_0_1_1_1___0.txt  0_0_0_1_1_1___1.txt  0_0_0_1_1_1___2.txt  0_0_0_1_1_1___3.txt  0_0_0_1_1_1___4.txt  0_0_0_1_1_1___5.txt  0_0_0_1_1_1___6.txt  0_0_0_1_1_1___7.txt  0_0_0_1_1_1___8.txt  0_0_0_1_1_1___9.txt  0_0_0_1_1_2___0.txt  0_0_0_1_1_2___1.txt  0_0_0_1_1_2___2.txt  0_0_0_1_1_2___3.txt  0_0_0_1_1_2___4.txt  0_0_0_1_1_2___5.txt  0_0_0_1_1_2___6.txt  0_0_0_1_1_2___7.txt  (+1220 more)
rviz/: default.rviz  race_track.rviz
scripts/: _utils.py  clear_raw_data_of_experiment.py  compare_cnns.py  computeRacetrackDimensions.py  config.py  dataset.py  evaluate_racing.py  forgetful_ann.py  forgetful_brain.py  forgetful_dataset.py  generate_video_from_cam_frames.py  get_experiment_ann_summary.py  model.py  resize_rgbs.py  resnet8.py  retrain_experiment.py  save_cnn_weights.py  train.py  train_experiment.py  update_experiment_tree.py  user_input.example.py  user_input.py  utils.py
src/: TensorFlow_guide.py  computeRacetrackDimensions.py  forgetful_brain.old.py  forgetful_brain_base.old.py  forgetful_brain_base.py  forgetful_drone_base.cpp  forgetful_drone_base.old.cpp  forgetful_drone_node.cpp  forgetful_expert_base.cpp  forgetful_helpers.cpp  forgetful_navigator_base.cpp  forgetful_orchestrator_base.cpp  forgetful_orchestrator_node.cpp  forgetful_simulator_base.cpp  forgetful_simulator_base.old.cpp  forgetful_simulator_node.cpp
srv/: BuildDroneRacingSimulation.srv  BuildRun.srv  BuildSimulation.srv  ComputeGlobalTrajectory.srv  FlyDroneProvidingNetworkOutput.srv  FlyDroneThroughRaceTrack.srv  Inference.srv  Int.srv  LoadRacetrack.srv  StringTrigger.srv  TrainBrain.srv
(+229 files in other folders)
