<?xml version="1.0"?>
<package format="2">
    <name>forgetful_drones</name>
    <version>0.0.0</version>
    <description>The forgetful_drones package</description>

    <maintainer email="fmang@outlook.de">fm</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <buildtool_depend>quad_cmake</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>autopilot</depend>
    <depend>cmake_modules</depend>
    <depend>controller_common</depend>
    <depend>copilot</depend>
    <depend>cv_bridge</depend>
    <depend>eigen_catkin</depend>
    <depend>gazebo</depend>
    <depend>gazebo_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>geometry_msgs</depend>
    <depend>mav_msgs</depend>
    <depend>minkindr_conversions</depend>
    <depend>polynomial_trajectories</depend>
    <depend>predictor</depend>
    <depend>quad_common</depend>
    <depend>quad_msgs</depend>
    <depend>rapid_trajectories</depend>
    <depend>roscpp</depend>
    <depend>rotors_description</depend>
    <depend>rotors_gazebo</depend>
    <depend>rpg_common</depend>
    <depend>rpg_rotors_interface</depend>
    <depend>rqt_quad_gui</depend>
    <depend>sensor_msgs</depend>
    <depend>state_predictor</depend>
    <depend>std_msgs</depend>
    <depend>tf</depend>
    <!--<depend>forgetful_drones_msgs</depend>-->
    <depend>flightlib</depend>
    <depend>image_transport</depend>
    
    
    
    <export>

    </export>
</package>
